fixed alignment of social

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ body {
   position: absolute;
   bottom: 0;
   left: 0;
-  height: 2px;
+  height: 0px;
   width: 0%;
   background: #00bcd4;
   border-radius: 2px;
